<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@color/blue"
    >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
android:layout_gravity="center"
        android:text="@string/changetype"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24dp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="50dp" />



    <EditText
        android:id="@+id/login"
        android:text="@string/entercount"
        android:layout_gravity="center"
        android:layout_marginTop="55dp"
        android:background="@drawable/foredit"
        android:layout_width="300dp"
        android:layout_height="50dp"></EditText>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="center"
    android:layout_marginTop="10dp"
    >

    <TextView
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:text="Из"

        android:textSize="18dp"
        android:textColor="@color/white"
        android:layout_marginRight="150dp"
        ></TextView>
    <TextView
        android:layout_width="40dp"
        android:layout_height="20dp"

        android:textSize="18dp"
        android:textColor="@color/white"
        android:text="В"
        ></TextView>
</LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
android:layout_gravity="center"
        android:layout_marginTop="20dp"
        >

        <EditText
            android:id="@+id/enterchislo"
            android:layout_width="145dp"
            android:layout_height="40dp"
            android:layout_gravity="left"

            android:background="@drawable/foredit"
            android:layout_marginRight="20dp"
            android:text="@string/bite"></EditText>

        <EditText
            android:id="@+id/pass"
            android:layout_width="145dp"
            android:layout_height="40dp"
            android:layout_gravity="right"

            android:background="@drawable/foredit"
            android:text="@string/kilobite"></EditText>
    </LinearLayout>
    <EditText
        android:id="@+id/result"
        android:text="@string/result"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/foredit"
        android:layout_width="300dp"
        android:layout_height="50dp"></EditText>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="165dp"
        android:layout_gravity="center"
        android:hint="@string/vuch"
        android:textColorHint="@color/white"
        android:background="@drawable/forebutton"
        android:textSize="18dp"
android:id="@+id/VUCK"
        >
    </androidx.appcompat.widget.AppCompatButton>
</LinearLayout>