<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FierdActivity"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@color/blue">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:layout_gravity="center"
        android:text="@string/con"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24dp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="50dp" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="100dp"
        android:layout_gravity="center"
        android:text="@string/vved"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24dp"
        android:textStyle="bold"

        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="50dp" />




    <EditText
        android:id="@+id/result"
        android:text="@string/result"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/foredit"
        android:layout_width="300dp"
        android:layout_height="50dp"></EditText>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="165dp"
        android:layout_gravity="center"
        android:hint="@string/registration"
        android:textColorHint="@color/white"
        android:background="@drawable/forebutton"
        android:textSize="18dp"
android:id="@+id/REGISTRATION"
        >
    </androidx.appcompat.widget.AppCompatButton>
</LinearLayout>